--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,19 @@
-/* Add your CSS styles here */
-.title {
-  color: blue;
-  font-size: 3rem;
+html {
+  padding: 0;
+  margin: 0;
 }
 
+body {
+  padding: 0;
+  margin: 0;
+}
+
+/* Disable vertical scrollbar */
+::-webkit-scrollbar {
+  display: none;
+}
+
+.title {
+  font-size: 3rem;
+  text-align: center;
+}
