--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon/favicon.png') }}"
+      type="image/x-icon"
+    />
+
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
